cicd/tekton/trigger-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: build-trigger
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
  name: el-build-listener
  annotations:
    argocd.argoproj.io/sync-wave: "6"
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-build-listener
    weight: 100
  wildcardPolicy: None
